--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Reloj Digital</title>
 </head>
 <body>
+              <div><iframe style="width:320px;height:260px;border-radius:10px;box-shadow:2px 4px 4px rgb(0 0 0 / 25%);display:flex;justify-content:center;border:1px solid #bcbcbc" src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0"></iframe></div>
+          
   <div class="date" id="date"></div>
   <div class="clock">
     <div class="time" id="time"></div>
